--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
   <header class="header">
     <div class="container">
       <div class="header-top">
@@ -20,7 +21,7 @@
           <img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
         </a>
 
-        <form action="#" class="search">
+        <form action="#" class="search header__search">
           <input type="text" placeholder="Search Location" class="search__input">
           <button class="search__button">
             <img src="img/search.svg" alt="Icon: search">
@@ -62,5 +63,6 @@
     </div>
     <!-- /.container -->
   </header>
+
 </body>
 </html>
