--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <span class="user__name">Nathan</span>
         </a>
         <!-- /.user -->
+
         <button class="menu-button navbar-top__menu-button">
           <span class="menu-button__line"></span>
           <span class="menu-button__line"></span>
@@ -72,8 +73,59 @@
       <!-- /.container -->
     </div>
     <!-- /.navbar-button -->
-
   </header>
+
+  <nav class="breadcrumb">
+    <div class="container">
+      <ul class="breadcrumb-list">
+        <li class="breadcrumb-list__item">
+          <a href="#" class="breadcrumb-list__link">Home</a>
+        </li>
+        <li class="breadcrumb-list__item">
+          <a href="#" class="breadcrumb-list__link">Flash Offers</a>
+        </li>
+        <li class="breadcrumb-list__item">
+          Grand Hilton Hotel
+        </li>
+      </ul>
+    </div>
+    <!-- /.container -->
+  </nav>
+  <!-- /.breadcrumb -->
+
+  <section class="hotel">
+    <div class="container">
+      <div class="hotel-info">
+
+        <div class="hotel-info__text">
+          <div class="hotel-wrapper">
+            <div class="stars">
+              <img src="img/star.svg" alt="Icon: star">
+              <img src="img/star.svg" alt="Icon: star">
+              <img src="img/star.svg" alt="Icon: star">
+              <img src="img/star.svg" alt="Icon: star">
+              <img src="img/star.svg" alt="Icon: star">
+            </div>
+            <h1 class="hotel-name hotel-info__name">Grand hilton hotel</h1>
+            <span class="offer hotel-info__offer">Flash Offer</span>
+          </div>
+          <!-- /.hotel-wrapper -->
+          <p class="hotel-description hotel-info__description">Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free</p>
+        </div>
+        <!-- /.hotel-info__text -->
+
+        <div class="rating hotel-info__rating">
+          <span class="rating__text">User Rattings</span>
+          <span class="rating__counter">4.5/<span class="rating__counter-genl">5</span></span>
+        </div>
+        <!-- /.rating hotel-info__rating -->
+
+      </div>
+      <!-- /.hotel-info -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.hotel -->
 
 </body>
 </html>
