--- a/index.html
+++ b/index.html
@@ -125,30 +125,26 @@
       <!-- /.hotel-info -->
 
       <div class="hotel-grid">
-        <div class="slider">
-          <!-- Slider main container -->
-          <div class="swiper">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide">
-                <img src="img/slide-1.jpg" alt="Hotel photo">
-              </div>
-              <div class="swiper-slide">
-                <img src="img/slide-2.jpg" alt="Hotel photo">
-              </div>
-              <div class="swiper-slide">
-                <img src="img/slide-3.jpg" alt="Hotel photo">
-              </div>
+        <div class="swiper hotel-slider hotel__slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide hotel-slider__slide">
+              <img src="img/slide-1.jpg" alt="Hotel photo" class="hotel-slider__img">
             </div>
-        
-            <!-- If we need navigation buttons -->
-            <button class="slider-button slider-button__prev"></button>
-            <button class="slider-button slider-button__next"></button>
+            <div class="swiper-slide hotel-slider__slide">
+              <img src="img/slide-2.jpg" alt="Hotel photo" class="hotel-slider__img">
+            </div>
+            <div class="swiper-slide hotel-slider__slide">
+              <img src="img/slide-3.jpg" alt="Hotel photo" class="hotel-slider__img">
+            </div>
+            <div class="swiper-slide hotel-slider__slide">
+              <img src="img/slide-4.jpg" alt="Hotel photo" class="hotel-slider__img">
+            </div>
           </div>
-          <!-- /.swiper -->
+      
+          <button class="hotel-slider__button hotel-slider__button--prev"></button>
+          <button class="hotel-slider__button hotel-slider__button--next"></button>
         </div>
-        <!-- /.slider -->
+        <!-- /.swiper hotel-slider hotel__slider -->
       </div>
       <!-- /.hotel-grid -->
     </div>
