fix: added 5th slider

--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
             <div class="swiper-slide hotel-slider__slide">
               <img src="img/slide-4.jpg" alt="Hotel photo" class="hotel-slider__img">
             </div>
+            <div class="swiper-slide hotel-slider__slide">
+              <img src="img/slide-5.jpg" alt="Hotel photo" class="hotel-slider__img">
+            </div>
           </div>
       
           <button class="hotel-slider__button hotel-slider__button--prev"></button>
