--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
 
         <div class="rating hotel-info__rating">
           <span class="rating__text">User Rattings</span>
-          <span class="rating__counter">4.5/
-            <span class="rating__counter-genl">5</span>
+          <span class="rating__counter">4.5/<span class="rating__counter-genl">5</span>
           </span>
         </div>
         <!-- /.rating hotel-info__rating -->
@@ -250,9 +249,9 @@
           <!-- /.booking -->
           
           <div class="map">
-            <iframe
+            <iframe class="map__location"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3525.5603868400253!2d34.32400015025172!3d27.915460922838044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14533828c6667643%3A0xbddf72bfdacb5296!2sSharm%20Dreams%20Resort!5e0!3m2!1sru!2sru!4v1637664796529!5m2!1sru!2sru"
-              width="100%" height="213" style="border: 0; border-radius: 10px;" allowfullscreen="" loading="lazy">
+              allowfullscreen="" loading="lazy">
             </iframe>
           </div>
           <!-- /.map -->
