fix: section hotel, adead: ico

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Best Tour Plan - Hotel Booking</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,17 +14,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=24d49834-a880-4f5f-829c-ed5b3fa7d6e2&lang=ru_RU"
-  type="text/javascript">
-  </script>
-  <script type="text/javascript">
-    ymaps.ready(init);
-    function init() {
-    var myMap = new ymaps.Map("map", {
-    center: [25.078276, 55.134926],
-    zoom: 17
-    });
-    }
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=24d49834-a880-4f5f-829c-ed5b3fa7d6e2&lang=en_RU">
   </script>
 </head>
 <body>
