--- a/index.html
+++ b/index.html
@@ -252,7 +252,13 @@
           </div>
           <!-- /.booking -->
 
-          <div id="map" class="map"></div>
+          <div class="map">
+            <iframe class="map__location"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3525.5603868400253!2d34.32400015025172!3d27.915460922838044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14533828c6667643%3A0xbddf72bfdacb5296!2sSharm%20Dreams%20Resort!5e0!3m2!1sru!2sru!4v1637664796529!5m2!1sru!2sru"
+              allowfullscreen="" loading="lazy">
+            </iframe>
+          </div>
+          <!-- /.map -->
 
         </div>
         <!-- /.hotel-booking-map -->
