create: added reviews section

--- a/index.html
+++ b/index.html
@@ -297,6 +297,107 @@
   </section>
   <!-- /.newsletter -->
 
+  <section class="reviews">
+    <div class="container">
+
+      <h2 class="reviews__title">What people think about us</h2>
+
+      <div class="swiper reviews-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img
+                  src="img/reviews__avatar-1.jpeg"
+                  alt="Avatar: Megan Fox"
+                  class="reviews-slider__avatar"
+                >
+                <h3 class="reviews-slider__username">Megan Fox</h3>
+                <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only
+                that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which
+                were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per
+                atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it
+                was a good experience and could recommend.
+              </p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews__avatar-2.jpeg" alt="Avatar: John Depp" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">John Depp</h3>
+                <span class="reviews-slider__date">Stayed 8 Nov, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero sed id incidunt suscipit facilis, soluta, officia laboriosam voluptatum, nemo dolor quasi eum. Impedit quasi adipisci laudantium molestiae itaque rem, aliquam ut sit, ullam est consectetur id quo eveniet inventore ratione distinctio, beatae cupiditate eum sapiente esse architecto vel? Modi, possimus!
+              </p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews__avatar-3.jpeg" alt="Avatar: Kristen Stewart" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Kristen Stewart</h3>
+                <span class="reviews-slider__date">Stayed 29 Oct, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                  <img src="img/star.svg" alt="Icon: star">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores accusantium aliquam, cum provident obcaecati voluptatem porro debitis culpa quam suscipit dolorem, laborum soluta, dolore reiciendis architecto voluptates. Suscipit, doloribus officiis ducimus ipsam a, eos, quo ipsa aliquam quae inventore doloremque voluptatum! Officiis, temporibus nisi? Officia beatae iure praesentium repellat eligendi est porro rem tenetur vitae eum pariatur, exercitationem fugiat eos nesciunt odio blanditiis ipsam incidunt mollitia provident, unde ratione. Aspernatur vitae doloremque officia dicta expedita, itaque repudiandae aut, quo quasi eius pariatur, dolor ad aliquid nemo officiis tempore delectus. Aut commodi, doloribus expedita vero culpa earum nulla libero harum optio?
+              </p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+
+        </div>
+        <!-- /.swiper-wrapper -->
+
+        <button class="reviews-slider__button reviews-slider__button--prev"></button>
+        <button class="reviews-slider__button reviews-slider__button--next"></button>
+      
+      </div>
+      <!-- /.swiper reviews-slider -->
+
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.reviews -->
+
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 
