--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Best Tour Plan - Hotel Booking</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <title>Best Tour Plan - Hotel Booking</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -300,7 +300,7 @@
   <section class="reviews">
     <div class="container">
 
-      <h2 class="reviews__title">What people think about us</h2>
+      <h2 class="reviews__title">What people think about&nbsp;us</h2>
 
       <div class="swiper reviews-slider">
         <div class="swiper-wrapper">
@@ -398,6 +398,8 @@
   </section>
   <!-- /.reviews -->
 
+  <script src="js/jquery-3.6.0.min.js"></script>
+  <script src="js/parallax.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 
