fix: reviews-slider and media

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           class="subscribe__input"
         >
         <button class="subscribe__button">
-          Send
+          <span>Send</span>
         </button>
       </form>
       
