--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
             <!-- /.reviews-slider__item -->
           </div>
           <!-- /.swiper-slide -->
+
           <div class="swiper-slide">
             <div class="reviews-slider__item">
               <div class="reviews-slider__profile">
@@ -359,7 +360,6 @@
           </div>
           <!-- /.swiper-slide -->
 
-          <!-- /.swiper-slide -->
           <div class="swiper-slide">
             <div class="reviews-slider__item">
               <div class="reviews-slider__profile">
@@ -383,13 +383,11 @@
             <!-- /.reviews-slider__item -->
           </div>
           <!-- /.swiper-slide -->
-
         </div>
         <!-- /.swiper-wrapper -->
 
         <button class="reviews-slider__button reviews-slider__button--prev"></button>
         <button class="reviews-slider__button reviews-slider__button--next"></button>
-      
       </div>
       <!-- /.swiper reviews-slider -->
 
@@ -397,6 +395,43 @@
     <!-- /.container -->
   </section>
   <!-- /.reviews -->
+
+  <section class="activities">
+    <div class="container">
+
+      <h2 class="activities__title">Other Activities</h2>
+
+      <div class="activities-wrapper">
+        <div class="card activities__card">
+          <img src="img/activities-1.jpg" alt="The curious corner of chamarel" class="card__image">
+          <h3 class="card__title">The curious corner of&nbsp;chamarel</h3>
+          <button class="card__button">Book Now</button>
+        </div>
+
+        <div class="card activities__card">
+          <img src="img/activities-2.jpg" alt="Gymkhana club golf course" class="card__image">
+          <h3 class="card__title">Gymkhana club golf course</h3>
+          <button class="card__button">Book Now</button>
+        </div>
+
+        <div class="card activities__card">
+          <img src="img/activities-3.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
+          <h3 class="card__title">Tamarind falls hiking trip&nbsp;-&nbsp;full day</h3>
+          <button class="card__button">Book Now</button>
+        </div>
+
+        <div class="card activities__card">
+          <img src="img/activities-4.jpg" alt="The blue marine discovery quest" class="card__image">
+          <h3 class="card__title">The blue marine discovery quest</h3>
+          <button class="card__button">Book Now</button>
+        </div>
+      </div>
+      <!-- /.activities-wrapper -->
+
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.activities -->
 
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/parallax.min.js"></script>
