--- a/index.html
+++ b/index.html
@@ -874,8 +874,8 @@
               </div>
               <span class="footer__text">
                 Tel (business hours): <a href="tel:2691500" class="footer__link">2691500</a><br>
-                Tel (hotline) Monday - Saturday: <a href="tel:52566138" class="footer__link">52-56-61-38</a> (08:00 am – 20:00 pm)<br>
-                Tel (hotline) Sunday: <a href="tel:52566138" class="footer__link">52-56-61-38</a> (08:00 am – 14:00 pm)
+                Tel (hotline) Monday - Saturday: <a href="tel:52566138" class="footer__link">52&#8209;56&#8209;61&#8209;38</a> (08:00 am – 20:00 pm)<br>
+                Tel (hotline) Sunday: <a href="tel:52566138" class="footer__link">52&#8209;56&#8209;61&#8209;38</a> (08:00 am – 14:00 pm)
               </span> 
             </li>
 
