fix: media for footer

--- a/index.html
+++ b/index.html
@@ -809,13 +809,13 @@
           <h3 class="footer__title footer__title--inline">Social&nbsp;Network</h3>
           
           <div class="footer__social-links">
-            <a href="#" class="footer__link img-facebook">
+            <a href="https://www.facebook.com" target="_blank" class="footer__link img-facebook">
               <!-- <img class="footer__icon-facebook" src="img/facebook.svg" alt="Icon: Facebook"> -->
             </a>
-            <a href="#" class="footer__link img-youtube">
+            <a href="https://www.youtube.com" target="_blank" class="footer__link img-youtube">
               <!-- <img class="footer__icon-youtube" src="img/youtube.svg" alt="Icon: YouTube"> -->
             </a>
-            <a href="#" class="footer__link img-instagram">
+            <a href="https://www.instagram.com" target="_blank" class="footer__link img-instagram">
               <!-- <img class="footer__icon-instagram" src="img/instagram.svg" alt="Icon: Instagram"> -->
             </a>   
           </div>
@@ -873,7 +873,7 @@
                 >
               </div>
               <span class="footer__text">
-                Tel (business hours): <a href="tel:2691500" class="footer__link">2691500</a><br>
+                Tel (business hours): <a href="tel:2691500" class="footer__link">269 1500</a><br>
                 Tel (hotline) Monday - Saturday: <a href="tel:52566138" class="footer__link">52&#8209;56&#8209;61&#8209;38</a> (08:00 am – 20:00 pm)<br>
                 Tel (hotline) Sunday: <a href="tel:52566138" class="footer__link">52&#8209;56&#8209;61&#8209;38</a> (08:00 am – 14:00 pm)
               </span> 
