--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-  <header class="navbar navbar__mobile--fixed">
+  <header class="navbar navbar--mobile-fixed">
     <div class="container">
       <div class="navbar-top navbar-top--fixed">
         
