fix: mail & cursor

--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
                   alt="Icon: E-mail"
                 >
               </div>
-              <a href="mail=cherly.lawson@example.com" class="footer__link">cherly.lawson@example.com</a>
+              <a href="mailto:=cherly.lawson@example.com" class="footer__link">cherly.lawson@example.com</a>
             </li>
           </ul>
         
