fix modal section

--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
     <div class="container">
       <div class="footer-wrapper">
 
-        <a href="index.html" class="footer--logo">
+        <a href="index.html" class="footer-logo">
           <img
             src="img/vertical-logo.svg"
             alt="Logo: Best Tour Plan"
@@ -850,7 +850,7 @@
 
         <div class="footer__list footer__category">
           
-          <h3 class="footer__title footer__list--categories">All&nbsp;categories</h3>
+          <h3 class="footer__title">All&nbsp;categories</h3>
 
           <ul class="footer__ul">
             <li class="footer__item">
@@ -1042,7 +1042,7 @@
   <!-- /.footer -->
 
   <div class="modal">
-    <div class="modal__overlay"></div>
+    <div class="modal__overlay modal__overlay--close"></div>
 
     <div class="modal__dialog">
       
