--- a/index.html
+++ b/index.html
@@ -1036,6 +1036,22 @@
       
       </div>
       <!-- /.footer-wrapper -->
+
+      <div class="footer__bottom">
+        <div class="main-information">
+          <a href="#" class="main-information__link">Disclaimer</a>
+          <a href="#" class="main-information__link">Conditions of use</a>
+          <a href="#" class="main-information__link">Cancellation policy</a>
+        </div>
+        <!-- /.main-information -->
+        <img
+          src="img/payment-systems.png"
+          alt="Icon: Payment systems"
+          class="main-information__image"
+        >
+      </div>
+      <!-- /.footer__bottom -->
+
     </div>
     <!-- /.container -->
   </footer>
