--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
         <img
           src="img/payment-systems.png"
           alt="Icon: Payment systems"
-          class="main-information__image"
+          class="footer__bottom-image"
         >
       </div>
       <!-- /.footer__bottom -->
