--- a/thankyou.html
+++ b/thankyou.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,47 +13,47 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&family=Nunito:wght@400;600;800&display=swap"
-    rel="stylesheet"
-  >
+    rel="stylesheet">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <header class="navbar navbar--mobile-fixed">
     <div class="container">
       <div class="navbar-top navbar-top--fixed">
-  
+
         <a href="index.html" class="logo">
           <img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
         </a>
-  
+
         <form action="#" class="search navbar__search navbar__search--mobile--hidden">
           <input type="text" placeholder="Search Location" class="search__input">
           <button class="search__button">
             <img src="img/search.svg" alt="Icon: search">
           </button>
         </form>
-  
+
         <a href="#" class="user navbar__user navbar__user--mobile--hidden">
           <img src="img/user-avatar.jpg" alt="Avatar: Nathan" class="user__avatar">
           <span class="user__name">Nathan</span>
         </a>
-  
+
         <button class="menu-button navbar-top__menu-button">
           <span class="menu-button__line"></span>
           <span class="menu-button__line"></span>
           <span class="menu-button__line"></span>
         </button>
-  
+
       </div>
       <!-- /.navbar-top -->
     </div>
     <!-- /.container -->
-  
+
     <div class="navbar-button">
       <div class="container">
-  
+
         <ul class="navbar-menu">
           <li class="navbar-menu__item navbar-menu__item--mobile--visible">
             <a href="#" class="user navbar__user navbar__user--mobile--visible">
@@ -90,17 +91,17 @@
             <a href="#" class="navbar-menu__link">Rodrigues</a>
           </li>
         </ul>
-  
+
       </div>
       <!-- /.container -->
     </div>
     <!-- /.navbar-button -->
   </header>
-  <!-- /.navbar -->
-  
+  <!-- /.navbar navbar--mobile-fixed -->
+
   <nav class="breadcrumb">
     <div class="container">
-  
+
       <ul class="breadcrumb-list">
         <li class="breadcrumb-list__item">
           <a href="#" class="breadcrumb-list__link">Home</a>
@@ -112,7 +113,7 @@
           Grand Hilton Hotel
         </li>
       </ul>
-  
+
     </div>
     <!-- /.container -->
   </nav>
@@ -129,11 +130,11 @@
           </div>
           <!-- /.hotel-wrapper -->
           <p class="hotel-description hotel-info__description">Our specialist will contact with you soon.</p>
-      
-          <!-- /.hotel-info__text -->
+
           <input class="button button__thankyou" type="button" onclick="history.back();" value="Back" />
 
         </div>
+        <!-- /.hotel-info__text -->
       </div>
       <!-- /.hotel-info -->
     </div>
@@ -142,17 +143,17 @@
   <!-- /.hotel -->
 
   <footer class="footer">
-    <div class="container">
+    <div class="container footer__container">
       <div class="footer-wrapper">
-  
+
         <a href="index.html" class="footer-logo">
           <img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan" class="logo footer__logo">
         </a>
-  
+
         <div class="footer__list footer__category">
-  
+
           <h3 class="footer__title">All&nbsp;categories</h3>
-  
+
           <ul class="footer__ul">
             <li class="footer__item">
               <a href="#" class="footer__link">All Deals</a>
@@ -179,14 +180,14 @@
               <a href="#" class="footer__link">Rodrigues</a>
             </li>
           </ul>
-  
+
         </div>
         <!-- /.footer__list footer__category -->
-  
+
         <div class="footer__list footer__additional">
-  
+
           <h3 class="footer__title">Additional&nbsp;information</h3>
-  
+
           <ul class="footer__ul">
             <li class="footer__item">
               <a href="#" class="footer__link">About Us</a>
@@ -207,44 +208,44 @@
               <a href="#" class="footer__link">Promote your Business on BTP</a>
             </li>
           </ul>
-  
+
         </div>
         <!-- /.footer__list footer__additional -->
-  
+
         <div class="footer__social-network">
-  
+
           <h3 class="footer__title footer__title--inline">Social&nbsp;Network</h3>
-  
+
           <div class="footer__social-links">
-  
+
             <a href="https://www.facebook.com/" target="_blank" class="footer__link">
               <svg class="footer__img">
                 <use xlink:href="img/social.svg#facebook"></use>
               </svg>
             </a>
-  
+
             <a href="https://www.youtube.com/" target="_blank" class="footer__link">
               <svg class="footer__img">
                 <use xlink:href="img/social.svg#youtube"></use>
               </svg>
             </a>
-  
+
             <a href="https://www.instagram.com/" target="_blank" class="footer__link">
               <svg class="footer__img">
                 <use xlink:href="img/social.svg#instagram"></use>
               </svg>
             </a>
-  
+
           </div>
           <!-- /.footer__social-links -->
-  
+
         </div>
         <!-- /.footer__social-network -->
-  
+
         <div class="footer__list footer__legal">
-  
+
           <h3 class="footer__title footer__title-legal">Legal&nbsp;information</h3>
-  
+
           <ul class="footer__ul">
             <li class="footer__item">
               <a href="#" class="footer__link">Terms & Conditions</a>
@@ -259,16 +260,16 @@
               <a href="#" class="footer__link">Privacy</a>
             </li>
           </ul>
-  
+
         </div>
         <!-- /.footer__list footer__legal -->
-  
+
         <div class="footer__contact-details">
-  
+
           <h3 class="footer__title footer__title-contact">Contact Details</h3>
-  
+
           <p class="footer__text">Feel free to contact us by phone, email or by our contact form</p>
-  
+
           <ul class="footer__ul">
             <li class="footer__item">
               <div class="footer__icon-wrapper">
@@ -276,7 +277,7 @@
               </div>
               <span class="footer__text">9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United States</span>
             </li>
-  
+
             <li class="footer__item">
               <div class="footer__icon-wrapper">
                 <img class="footer__icon" src="img/footer-phone.svg" alt="Icon: Phone call">
@@ -285,11 +286,11 @@
                 Tel (business hours): <a href="tel:2691500" class="footer__link">269 1500</a><br>
                 Tel (hotline) Monday - Saturday: <a href="tel:52566138"
                   class="footer__link">52&#8209;56&#8209;61&#8209;38</a> (08:00 am – 20:00 pm)<br>
-                Tel (hotline) Sunday: <a href="tel:52566138" class="footer__link">52&#8209;56&#8209;61&#8209;38</a> (08:00
-                am – 14:00 pm)
+                Tel (hotline) Sunday: <a href="tel:52566138" class="footer__link">52&#8209;56&#8209;61&#8209;38</a>
+                (08:00 am – 14:00 pm)
               </span>
             </li>
-  
+
             <li class="footer__item">
               <div class="footer__icon-wrapper">
                 <img class="footer__icon" src="img/footer-email.svg" alt="Icon: E-mail">
@@ -297,43 +298,48 @@
               <a href="mailto:=cherly.lawson@example.com" class="footer__link">cherly.lawson@example.com</a>
             </li>
           </ul>
-  
+
         </div>
         <!-- /.footer__contact-details -->
-  
+
         <div class="footer__contact-form">
-  
+
           <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-  
+
           <form class="form footer__form" action="send.php" method="post">
-  
+
             <div class="footer__input-wrapper">
               <div class="footer__input-group">
                 <input name="name" class="input footer__input" type="text" placeholder="Your Full Name*" minlength="2"
                   required>
               </div>
-  
+
               <div class="footer__input-group">
                 <input name="phone" class="input footer__input phone-number" type="tel" placeholder="Phone Number*"
                   minlength="18" required>
               </div>
             </div>
             <!-- /.footer__input-wrapper -->
-  
-            <textarea name="message" class="message footer__message" cols="30" rows="10" placeholder="Message"></textarea>
-  
-            <button class="button footer__button" type="submit">Send</button>
-  
-            <span class="footer__info">* Required Fields</span>
-  
+
+            <div class="footer__message-wrapper">
+              <textarea name="message" class="message footer__message" cols="30" rows="10"
+                placeholder="Message"></textarea>
+            </div>
+
+            <div class="footer__info-bottom">
+              <button class="button footer__button" type="submit">Send</button>
+
+              <span class="footer__info">* Required Fields</span>
+            </div>
+
           </form>
-  
+
         </div>
         <!-- /.footer__contact-form -->
-  
+
       </div>
       <!-- /.footer-wrapper -->
-  
+
       <div class="footer__bottom">
         <div class="main-information">
           <a href="#" class="main-information__link">Disclaimer</a>
@@ -344,7 +350,7 @@
         <img src="img/payment-systems.png" alt="Icon: Payment systems" class="footer__bottom-image">
       </div>
       <!-- /.footer__bottom -->
-  
+
     </div>
     <!-- /.container -->
   </footer>
@@ -355,8 +361,8 @@
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/jquery.validate.min.js"></script>
   <script src="js/jquery.mask.min.js"></script>
-  <script src="js/jquery-ui.min.js"></script>
   <script src="js/main.js"></script>
 
 </body>
+
 </html>
