--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
     <!-- /.navbar-button -->
   </header>
-  <!-- /.navbar -->
+  <!-- /.navbar navbar--mobile-fixed -->
 
   <nav class="breadcrumb">
     <div class="container">
@@ -314,7 +314,263 @@
   </section>
   <!-- /.hotel -->
 
-
+  <section class="packages">
+    <div class="container">
+  
+      <h2 class="packages__title">Other Packages</h2>
+  
+      <div class="packages-wrapper">
+        <!-- Развернутая карточка -->
+        <div class="pack detailed-pack">
+          <!-- Картинка и offer -->
+          <div class="pack__image-offer">
+            <img src="img/packages-1.jpg" alt="Hotel Blue Haven" class="pack__image detailed-pack__image">
+            <span class="offer pack__offer detailed-pack__offer">Flash Offer</span>
+          </div>
+          <!-- Информация об отеле -->
+          <div class="pack__info detailed-pack__info">
+  
+            <!-- Рейтинг и название отеля -->
+            <div class="detailed-pack__name">
+              <div class="star detailed-pack__star">
+                <img src="img/star.svg" alt="Icon: star">
+                <img src="img/star.svg" alt="Icon: star">
+                <img src="img/star.svg" alt="Icon: star">
+                <img src="img/star.svg" alt="Icon: star">
+                <img src="img/star.svg" alt="Icon: star">
+              </div>
+              <!-- /.star detailed-pack__star -->
+              <h3 class="pack__title detailed-pack__title">Hotel Blue Haven</h3>
+            </div>
+            <!-- /.detailed-pack__name -->
+  
+            <!-- Описание -->
+            <p class="detailed-pack__information">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim
+              laborum magna llit. Ipsum est fugiat velit ea
+              llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod
+              nsectetur enim
+              laborum magna mollit. Ipsum est fugiat velit ea ullamco do</p>
+  
+            <!-- О номере -->
+            <div class="pack__room detailed-pack__room">
+              <div class="pack__text">
+                <img src="img/map-pin.svg" alt="Icon: map" class="pack__icon">
+                <span class="pack__description">
+                  1749 Wheeler Ridge Delaware
+                </span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__guests.svg" alt="Icon: guests" class="pack__icon">
+                <span class="pack__description">
+                  2 x Guests
+                </span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__room.svg" alt="Icon: room" class="pack__icon">
+                <span class="pack__description">
+                  1 x Room
+                </span>
+              </div>
+  
+            </div>
+            <!-- /.pack__room -->
+  
+            <!-- Цена и кнопка -->
+            <div class="pack-price">
+              <span class="pack-price__old">$ 10,500</span>
+              <strong class="pack-price__sale">$ 8,500</strong>
+              <button data-toggle="modal" class="pack-price__button">Book Now</button>
+            </div>
+            <!-- /.pack__price -->
+          </div>
+          <!-- /.pack__info detailed-pack__info -->
+        </div>
+        <!-- /.pack packages-detailed -->
+  
+        <!-- Обычная карточка -->
+        <div class="pack">
+          <!-- Картинка и offer -->
+          <div class="pack__image-offer">
+            <img src="img/packages-2.jpg" alt="LUX* Belle Mare" class="pack__image">
+            <span class="offer pack__offer">Flash Offer</span>
+          </div>
+          <!-- Информация об отеле -->
+          <div class="pack__info info-none">
+  
+            <!-- Название отеля -->
+            <h3 class="pack__title">LUX* Belle Mare</h3>
+  
+            <!-- О номере -->
+            <div class="pack__room">
+              <div class="pack__text">
+                <img src="img/map-pin.svg" alt="Icon: map" class="pack__icon">
+                <span class="pack__description">1749 Wheeler Ridge Delaware</span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__guests.svg" alt="Icon: guests" class="pack__icon">
+                <span class="pack__description">2 x Guests</span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__room.svg" alt="Icon: room" class="pack__icon">
+                <span class="pack__description">1 x Room</span>
+              </div>
+            </div>
+            <!-- /.pack__room-->
+  
+            <!-- Цена и кнопка -->
+            <div class="pack-price">
+              <span class="pack-price__old">$ 8,500</span>
+              <strong class="pack-price__sale">$ 3,000</strong>
+              <button data-toggle="modal" class="pack-price__button">Book Now</button>
+            </div>
+            <!-- /.pack__price -->
+          </div>
+          <!-- /.pack__info info-none -->
+        </div>
+        <!-- /.pack -->
+  
+        <!-- Обычная карточка -->
+        <div class="pack">
+          <!-- Картинка и offer -->
+          <div class="pack__image-offer">
+            <img src="img/packages-3.jpg" alt="White Palace" class="pack__image">
+            <span class="offer pack__offer">Flash Offer</span>
+          </div>
+          <!-- Информация об отеле -->
+          <div class="pack__info info-none">
+  
+            <!-- Название отеля -->
+            <h3 class="pack__title">White Palace</h3>
+  
+            <!-- О номере -->
+            <div class="pack__room">
+              <div class="pack__text">
+                <img src="img/map-pin.svg" alt="Icon: map" class="pack__icon">
+                <span class="pack__description">1749 Wheeler Ridge Delaware</span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__guests.svg" alt="Icon: guests" class="pack__icon">
+                <span class="pack__description">2 x Guests</span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__room.svg" alt="Icon: room" class="pack__icon">
+                <span class="pack__description">1 x Room</span>
+              </div>
+            </div>
+            <!-- /.pack__room-->
+  
+            <!-- Цена и кнопка -->
+            <div class="pack-price">
+              <span class="pack-price__old">$ 10,500</span>
+              <strong class="pack-price__sale">$ 9,500</strong>
+              <button data-toggle="modal" class="pack-price__button">Book Now</button>
+            </div>
+            <!-- /.pack__price -->
+          </div>
+          <!-- /.pack__info info-none -->
+        </div>
+        <!-- /.pack -->
+  
+        <!-- Обычная карточка -->
+        <div class="pack">
+          <!-- Картинка и offer -->
+          <div class="pack__image-offer">
+            <img src="img/packages-4.jpg" alt="Luxury Place" class="pack__image">
+            <span class="offer pack__offer">Flash Offer</span>
+          </div>
+          <!-- Информация об отеле -->
+          <div class="pack__info info-none">
+  
+            <!-- Название отеля -->
+            <h3 class="pack__title">Luxury Place</h3>
+  
+            <!-- О номере -->
+            <div class="pack__room">
+              <div class="pack__text">
+                <img src="img/map-pin.svg" alt="Icon: map" class="pack__icon">
+                <span class="pack__description">1749 Wheeler Ridge Delaware</span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__guests.svg" alt="Icon: guests" class="pack__icon">
+                <span class="pack__description">2 x Guests</span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__room.svg" alt="Icon: room" class="pack__icon">
+                <span class="pack__description">1 x Room</span>
+              </div>
+            </div>
+            <!-- /.pack__room-->
+  
+            <!-- Цена и кнопка -->
+            <div class="pack-price">
+              <span class="pack-price__old">$ 4,500</span>
+              <strong class="pack-price__sale">$ 2,500</strong>
+              <button data-toggle="modal" class="pack-price__button">Book Now</button>
+            </div>
+            <!-- /.pack__price -->
+          </div>
+          <!-- /.pack__info info-none -->
+        </div>
+        <!-- /.pack -->
+  
+        <!-- Обычная карточка -->
+        <div class="pack">
+          <!-- Картинка и offer -->
+          <div class="pack__image-offer">
+            <img src="img/packages-5.jpg" alt="Hotel Five Star" class="pack__image">
+            <span class="offer pack__offer">Flash Offer</span>
+          </div>
+          <!-- Информация об отеле -->
+          <div class="pack__info info-none">
+  
+            <!-- Название отеля -->
+            <h3 class="pack__title">Hotel Five Star</h3>
+  
+            <!-- О номере -->
+            <div class="pack__room">
+              <div class="pack__text">
+                <img src="img/map-pin.svg" alt="Icon: map" class="pack__icon">
+                <span class="pack__description">1749 Wheeler Ridge Delaware</span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__guests.svg" alt="Icon: guests" class="pack__icon">
+                <span class="pack__description">2 x Guests</span>
+              </div>
+  
+              <div class="pack__text">
+                <img src="img/person-room__room.svg" alt="Icon: room" class="pack__icon">
+                <span class="pack__description">1 x Room</span>
+              </div>
+            </div>
+            <!-- /.pack__room-->
+  
+            <!-- Цена и кнопка -->
+            <div class="pack-price">
+              <span class="pack-price__old">$ 6,500</span>
+              <strong class="pack-price__sale">$ 3,500</strong>
+              <button data-toggle="modal" class="pack-price__button">Book Now</button>
+            </div>
+            <!-- /.pack__price -->
+          </div>
+          <!-- /.pack__info info-none -->
+        </div>
+        <!-- /.pack -->
+  
+      </div>
+      <!-- /.packages-wrapper -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.packages -->
 
   <section class="newsletter">
     <div class="newsletter-wrapper">
@@ -828,7 +1084,6 @@
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/jquery.validate.min.js"></script>
   <script src="js/jquery.mask.min.js"></script>
-  <script src="js/jquery-ui.min.js"></script>
   <script src="js/main.js"></script>
 
 </body>
